--- a/package.json
+++ b/package.json
@@ -9,13 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.11.10",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.3",
+    "classnames": "^2.3.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-select": "^5.7.0",
+    "react-yandex-maps": "^4.6.0",
+    "sass": "^1.58.1",
+    "swiper": "^9.0.5",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@types/google-map-react": "^2.1.7"
   }
 }
