--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "@types/react-scroll": "^1.8.6",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-scroll": "^1.8.9",
     "react-select": "^5.7.0",
     "react-yandex-maps": "^4.6.0",
     "sass": "^1.58.1",
     "swiper": "^9.0.5",
     "typescript": "4.9.5"
   }
-
-
 }
